Tests/old/testastest/erreu01a.err
Compilation impossible :   File "erreu01a.comm", line 44
     UELAS=MECA_STATIQUE(MODELE=MOD,
     ^
 SyntaxError: invalid syntax
